@@ -199,8 +199,11 @@ int main(int argc, char **argv)
 	option			longOptions[]={{"window",1,0,'w'},{0, 0, 0, 0}};
 
 	apc=new LFSTK_applicationClass();
-	apc->LFSTK_addWindow(NULL,BOXLABEL,"LFSTKPrefs");
+	apc->LFSTK_getDefaultWInit();
+	apc->LFSTK_addWindow(NULL,BOXLABEL,"LFSDesktopPrefs");
 	wc=apc->mainWindow;
+	wc->LFSTK_setKeepAbove(true);
+	wc->LFSTK_setDecorations(false,false,false,true);
 
 	cliprefs.prefsMap=
 		{
