@@ -1,4 +1,6 @@
 0.2.0
+added clolour chooser desktop file.
+Fixed dialogs.
 Updated lfstrayprefs.
 Added lfstrayprefs.
 Updated lfswm2prefs.
